NetBSD Problem Report #41143

From www@NetBSD.org  Sun Apr  5 08:10:50 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 73EF063B8C8
	for <gnats-bugs@gnats.netbsd.org>; Sun,  5 Apr 2009 08:10:50 +0000 (UTC)
Message-Id: <20090405081050.47A2763B8A5@www.NetBSD.org>
Date: Sun,  5 Apr 2009 08:10:50 +0000 (UTC)
From: rillig@NetBSD.org
Reply-To: rillig@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: pkg_add -u doesn't record inverse dependencies
X-Send-Pr-Version: www-1.0

>Number:         41143
>Category:       pkg
>Synopsis:       pkg_add -u doesn't record inverse dependencies
>Confidential:   no
>Severity:       critical
>Priority:       medium
>Responsible:    pkg-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Apr 05 08:15:00 +0000 2009
>Closed-Date:    Sat Apr 11 17:43:12 +0000 2009
>Last-Modified:  Sat Apr 11 17:43:12 +0000 2009
>Originator:     Roland Illig
>Release:        Linux 2.6
>Organization:
>Environment:
>Description:
In a new, clean pkgsrc installation, I did the following:

$ pkg_add pkglint-4.87.tgz
[...]
$ pkg_delete -r perl
[...]

This did exactly what I expected. Then, I did:

$ pkg_add pkglint-4.87.tgz
[...]
$ pkg_add -u pkglint-4.91.tgz
[...]
$ pkg_delete -r perl
[...]

Now, pkglint is still installed, but all its dependencies are gone. This is because "pkg_add -u" removed the old dependency (pkglint-4.87) from p5-Digest-SHA1/+REQUIRED_BY, but didn't add the new dependency (pkglint-4.91).
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: Joerg Sonnenberger <joerg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41143 CVS commit: pkgsrc/pkgtools/pkg_install/files
Date: Mon, 6 Apr 2009 14:34:16 +0000

 Module Name:	pkgsrc
 Committed By:	joerg
 Date:		Mon Apr  6 14:34:15 UTC 2009

 Modified Files:
 	pkgsrc/pkgtools/pkg_install/files/add: perform.c
 	pkgsrc/pkgtools/pkg_install/files/lib: version.h

 Log Message:
 pkg_install-20090406:
 Remove premature return that broke dependency tracking for pkg_add -u.
 Fixes PR 41143.


 To generate a diff of this commit:
 cvs rdiff -u -r1.84 -r1.85 pkgsrc/pkgtools/pkg_install/files/add/perform.c
 cvs rdiff -u -r1.120 -r1.121 pkgsrc/pkgtools/pkg_install/files/lib/version.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Joerg Sonnenberger <joerg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41143 CVS commit: src/external/bsd/pkg_install/dist
Date: Mon, 6 Apr 2009 18:49:16 +0000

 Module Name:	src
 Committed By:	joerg
 Date:		Mon Apr  6 18:49:16 UTC 2009

 Update of /cvsroot/src/external/bsd/pkg_install/dist
 In directory ivanova.netbsd.org:/tmp/cvs-serv9002

 Log Message:
 Import pkg_install-20090406:
 Remove premature return that broke dependency tracking for pkg_add -u.
 Fixes PR 41143.

 Status:

 Vendor Tag:	PKGSRC
 Release Tags:	pkg_install-20090406

 U src/external/bsd/pkg_install/dist/add/add.h
 U src/external/bsd/pkg_install/dist/add/main.c
 U src/external/bsd/pkg_install/dist/add/perform.c
 U src/external/bsd/pkg_install/dist/add/pkg_add.1
 U src/external/bsd/pkg_install/dist/admin/README
 U src/external/bsd/pkg_install/dist/admin/admin.h
 U src/external/bsd/pkg_install/dist/admin/audit-packages.sh.in
 U src/external/bsd/pkg_install/dist/admin/audit.c
 U src/external/bsd/pkg_install/dist/admin/check.c
 U src/external/bsd/pkg_install/dist/admin/download-vulnerability-list.sh.in
 U src/external/bsd/pkg_install/dist/admin/main.c
 U src/external/bsd/pkg_install/dist/admin/pkg_admin.1
 U src/external/bsd/pkg_install/dist/bpm/bpm.1
 U src/external/bsd/pkg_install/dist/bpm/bpm.sh.in
 U src/external/bsd/pkg_install/dist/create/build.c
 U src/external/bsd/pkg_install/dist/create/create.h
 U src/external/bsd/pkg_install/dist/create/main.c
 U src/external/bsd/pkg_install/dist/create/perform.c
 U src/external/bsd/pkg_install/dist/create/pkg_create.1
 U src/external/bsd/pkg_install/dist/create/pl.c
 U src/external/bsd/pkg_install/dist/create/util.c
 U src/external/bsd/pkg_install/dist/delete/pkg_delete.1
 U src/external/bsd/pkg_install/dist/delete/pkg_delete.c
 U src/external/bsd/pkg_install/dist/info/info.h
 U src/external/bsd/pkg_install/dist/info/main.c
 U src/external/bsd/pkg_install/dist/info/perform.c
 U src/external/bsd/pkg_install/dist/info/pkg_info.1
 U src/external/bsd/pkg_install/dist/info/show.c
 U src/external/bsd/pkg_install/dist/lib/automatic.c
 U src/external/bsd/pkg_install/dist/lib/config.h.in
 U src/external/bsd/pkg_install/dist/lib/conflicts.c
 U src/external/bsd/pkg_install/dist/lib/decompress.c
 U src/external/bsd/pkg_install/dist/lib/defs.h
 U src/external/bsd/pkg_install/dist/lib/dewey.c
 U src/external/bsd/pkg_install/dist/lib/dewey.h
 U src/external/bsd/pkg_install/dist/lib/fexec.c
 U src/external/bsd/pkg_install/dist/lib/file.c
 U src/external/bsd/pkg_install/dist/lib/global.c
 U src/external/bsd/pkg_install/dist/lib/gpgsig.c
 U src/external/bsd/pkg_install/dist/lib/iterate.c
 U src/external/bsd/pkg_install/dist/lib/lib.h
 U src/external/bsd/pkg_install/dist/lib/lpkg.c
 U src/external/bsd/pkg_install/dist/lib/opattern.c
 U src/external/bsd/pkg_install/dist/lib/parse-config.c
 U src/external/bsd/pkg_install/dist/lib/pkcs7.c
 U src/external/bsd/pkg_install/dist/lib/pkg_install.conf.5.in
 U src/external/bsd/pkg_install/dist/lib/pkg_io.c
 U src/external/bsd/pkg_install/dist/lib/pkg_signature.c
 U src/external/bsd/pkg_install/dist/lib/pkg_summary.5
 U src/external/bsd/pkg_install/dist/lib/pkgdb.c
 U src/external/bsd/pkg_install/dist/lib/pkgsrc.7
 U src/external/bsd/pkg_install/dist/lib/plist.c
 U src/external/bsd/pkg_install/dist/lib/remove.c
 U src/external/bsd/pkg_install/dist/lib/str.c
 U src/external/bsd/pkg_install/dist/lib/var.c
 U src/external/bsd/pkg_install/dist/lib/version.c
 U src/external/bsd/pkg_install/dist/lib/version.h
 U src/external/bsd/pkg_install/dist/lib/vulnerabilities-file.c
 U src/external/bsd/pkg_install/dist/lib/xwrapper.c
 U src/external/bsd/pkg_install/dist/x509/pkgsrc.cnf
 U src/external/bsd/pkg_install/dist/x509/pkgsrc.sh
 U src/external/bsd/pkg_install/dist/x509/signing.txt

 No conflicts created by this import

From: "S.P.Zeidler" <spz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41143 CVS commit: [pkgsrc-2009Q1] pkgsrc/pkgtools/pkg_install/files
Date: Sat, 11 Apr 2009 17:38:49 +0000

 Module Name:	pkgsrc
 Committed By:	spz
 Date:		Sat Apr 11 17:38:49 UTC 2009

 Modified Files:
 	pkgsrc/pkgtools/pkg_install/files/add [pkgsrc-2009Q1]: perform.c
 	pkgsrc/pkgtools/pkg_install/files/lib [pkgsrc-2009Q1]: version.h

 Log Message:
 Pullup ticket 2732 - requested by joerg
 Bug fix

 Revisions pulled up:
 - pkgsrc/pkgtools/pkg_install/files/add/perform.c	1.85
 - pkgsrc/pkgtools/pkg_install/files/lib/version.h	1.121

    Module Name:	pkgsrc
    Committed By:	joerg
    Date:		Mon Apr  6 14:34:15 UTC 2009

    Modified Files:
    	pkgsrc/pkgtools/pkg_install/files/add: perform.c
    	pkgsrc/pkgtools/pkg_install/files/lib: version.h

    Log Message:
    pkg_install-20090406:
    Remove premature return that broke dependency tracking for pkg_add -u.
    Fixes PR 41143.

    To generate a diff of this commit:
    cvs rdiff -u -r1.84 -r1.85 pkgsrc/pkgtools/pkg_install/files/add/perform.c
    cvs rdiff -u -r1.120 -r1.121 pkgsrc/pkgtools/pkg_install/files/lib/version.h


 To generate a diff of this commit:
 cvs rdiff -u -r1.84 -r1.84.2.1 \
     pkgsrc/pkgtools/pkg_install/files/add/perform.c
 cvs rdiff -u -r1.120 -r1.120.2.1 \
     pkgsrc/pkgtools/pkg_install/files/lib/version.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: joerg@NetBSD.org
State-Changed-When: Sat, 11 Apr 2009 17:43:12 +0000
State-Changed-Why:
Should be fixed. Thanks for the report.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.