Import pkg_install-20090406: Remove premature return that broke dependency tracking for pkg_add -u. Fixes PR 41143.